Grid Spacing Fixes

--- a/lesson6/chamber/styles/large.css
+++ b/lesson6/chamber/styles/large.css
@@ -69,17 +69,20 @@
     }
 
     #spotlights {
-        display: block;
+        display: flex;
         grid-column: 5;
         grid-row: 1/4;
     }
 
-    #spotlights div {
-        margin: 20% auto;
+    #spotlights div p {
+        font-size: 0.7em;
     }
 
     #spotlights div p {
-        font-size: 0.7em;
+        grid-column: 1/3;
+        padding: 0;
+        padding-bottom: 1rem;
+        overflow: hidden;
     }
 
     #spotlights div:nth-of-type(3) {
