--- a/lesson6/chamber/styles/medium.css
+++ b/lesson6/chamber/styles/medium.css
@@ -12,10 +12,22 @@
 
     main {
         display: grid;
+        gap: 1em;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 1em;
+    }
+
+    section {
+        margin: 0;
+        padding: 0;
     }
 
     #hero {
         grid-column: 1/4;
+    }
+
+    h2 {
+        font-size: 2.5em;
     }
 
     #news {
@@ -26,11 +38,9 @@
     #spotlights {
         grid-column: 1/4;
         grid-row: 3;
-        flex-direction: row;
-    }
-
-    #spotlights div {
-        width: 85%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2%;
     }
 
     #join {
@@ -113,7 +123,13 @@
     }
 
     #join button {
-        margin-top: 10%;
+        width: 80%;
+        margin: 3% 0;
+    }
+
+    #meeting_banner {
+        margin: 1%;
+        padding: 1%;
     }
 
 }
